discussion/kv_engine/173825/173825_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51719: CBStatCollector::formatKey Simplify dynamic format args handling

As per comments in CBStatCollector::formatKey helper function
formatFromMap, the handling of dynamic format arguments is signicanlty
simpler with the introduction of dynamic labelled arguments in fmtlib
8 - see https://fmt.dev/latest/api.html#named-arguments

Remove the somewhat complex manual handling of this and delegate to
fmtlib.

Change-Id: I7c070cf327cb19f4db88d257e1cd768281c0b89a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-04-20 13:51:21.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 14:23:56.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45417/ : FAILURE

Compile error at ..\kv_engine\statistics\cbstat_collector.cc(14): fatal error C1083: Cannot open include file: "fmt/args.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45417/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38156/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38156/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16800/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/cbstat_collector.cc:14:10: error: "fmt/args.h" file not found [clang-diagnostic-error]
#include <fmt/args.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16800/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/cbstat_collector.cc:14:10:
error: "fmt/args.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16800/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19621/ : FAILURE

Compile error at [2022-04-20T14:13:21.307Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19621/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6528/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26988/ : FAILURE

Compile error at [2022-04-20T14:15:57.108Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26988/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6457/ : FAILURE

Compile error at [2022-04-20T14:11:59.101Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6457/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18583/ : FAILURE

Compile error at [2022-04-20T14:14:09.659Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18919/ : FAILURE

Compile error at [2022-04-20T14:15:22.911Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17680/ : FAILURE

Compile error at [2022-04-20T13:58:25.176Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17680/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15734/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-21 15:16:39.000000000
Message: 
Patch Set 5: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26984/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26984/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6455/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19618/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19618/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18580/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18580/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18916/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18916/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17675/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17675/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6517/ : FAILURE

Compile error at [2022-04-20T14:27:28.399Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6517/ )
----------------------------------------------------------------------------------------------------------------------
